--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,13 @@
   },
   "extends": "airbnb-base",
   "root": true,
-  "parser": "babel-eslint"
+  "plugins": ["@babel"],
+  "parserOptions": {
+    "parser": "@babel/eslint-parser",
+    "requireConfigFile": false,
+    "ecmaVersion": 2018
+  },
+  "rules": {
+    "indent": ["error", "tab"]
+  }
 }
