--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/SergeyBat/Theme7-Company#readme",
   "devDependencies": {
+    "@babel/core": "^7.19.0",
     "@babel/eslint-parser": "^7.18.9",
     "@babel/eslint-plugin": "^7.18.10",
-    "eslint": "8.23.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "babel": "^6.23.0",
+    "eslint": "8.22.0",
+    "eslint-config-airbnb-base": "^15.0.0"
   }
 }
